--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerador de ingressos</title>
+    <link rel="stylesheet" href="/css/index.css">
+    <link rel="shortcut icon" href="/imgs/logo-mark.svg" type="image/x-icon">
 </head>
 
 <body>
     <header>
         <img src="/imgs/logo-full.svg" alt="Logo Coding Conf">
-        <h1>FastTicket</h1>
     </header>
     <main>
         <div class="texInicial">
@@ -21,7 +22,8 @@
         <div id="boxFormulario">
             <form action="">
 
-                <div class="avatarInput">
+                <div class="avatarInput inptfont">
+                    <img src="/imgs/icon-upload.svg" alt="">
                     <p>Upload Avatar</p>
                     <input type="file" id="imageUpload" name="imageUpload" accept="image/*">
                 </div>
@@ -30,7 +32,7 @@
                     <p id="imginput">Sua foto (JPG ou PNG)</p>
                 </div>
 
-                <div class="pessoalInput">
+                <div class="pessoalInput inptfont">
                     <p>Full Name</p>
                     <input type="text" name="nome" id="nome">
                     <div class="info">
@@ -49,10 +51,6 @@
                     <input type="text" name="username" id="user name">
                     <div class="info">
                         <img src="/imgs/icon-info.svg" alt="Info Logo">
-                        <p>Sua foto (JPG ou PNG)</p>
-                    </div>
-                    <div class="info">
-                        <img src="/imgs/icon-info.svg" alt="Info Logo">
                         <p id="gitinput">Sua foto (JPG ou PNG)</p>
                     </div>
 
@@ -62,7 +60,12 @@
 
             </form>
         </div>
+
     </main>
+    <img class="img01" src="/imgs/pattern-squiggly-line-top.svg" alt="">
+    <img ass="img02" src="/imgs/pattern-squiggly-line-bottom-desktop.svg" alt="">
+    <img ass="img03" src="/imgs/pattern-lines.svg" alt="">
+    
 </body>
 
 </html>
