--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <header>
+    <div class="imgbackgroung">
+<header>
         <img src="/imgs/logo-full.svg" alt="Logo Coding Conf">
     </header>
     <main>
@@ -63,8 +64,11 @@
 
     </main>
     <img class="img01" src="/imgs/pattern-squiggly-line-top.svg" alt="">
-    <img ass="img02" src="/imgs/pattern-squiggly-line-bottom-desktop.svg" alt="">
-    <img ass="img03" src="/imgs/pattern-lines.svg" alt="">
+    <img class="img02" src="/imgs/pattern-squiggly-line-bottom-desktop.svg" alt="">
+    <img class="img03" src="/imgs/pattern-lines.svg" alt="">
+    <img class="img04" src="/imgs/pattern-circle.svg" alt="">
+    </div>
+    
     
 </body>
 
