--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 <body>
     <div class="imgbackgroung">
-<header>
-        <img src="/imgs/logo-full.svg" alt="Logo Coding Conf">
+    <header>
+        <img id="imgLogo" src="/imgs/logo-full.svg" alt="Logo Coding Conf">
     </header>
     <main>
         <div class="texInicial">
-            <h2>Crie seu ingresso personalizado de forma rápida e fácil,</h2>
-            <h3>tudo aqui, em apenas alguns cliques!</h3>
+            <h2>Crie seu ingresso personalizado </h2>
+            <h3>de forma rápida e fácil,tudo aqui, em apenas alguns cliques!</h3>
         </div>
 
         <div id="boxFormulario">
