estilo input final

--- a/index.html
+++ b/index.html
@@ -36,28 +36,24 @@
                     </div>
 
                     <div class="pessoalInput">
+
                         <p>Full Name</p>
-                        <input type="text" name="nome" id="nome">
-                        <div class="info">
-                            <img src="/imgs/icon-info.svg" alt="Info Logo">
-                            <p id="nomeinput">Sua foto (JPG ou PNG)</p>
-                        </div>
+                        <input type="text" name="nome" id="nome" class="input-estilo">
 
                         <p>Email Address</p>
-                        <input type="email" name="email" id="email" placeholder="exemplo@email.com">
-                        <div class="info">
+                        <input type="email" name="email" id="email" placeholder="exemplo@email.com" class="input-estilo">
+                        <div class="info infoEstilo">
                             <img src="/imgs/icon-info.svg" alt="Info Logo">
                             <p id="emailinput">Sua foto (JPG ou PNG)</p>
                         </div>
 
                         <p>GitHub Username</p>
-                        <input type="text" name="username" id="user name">
-                        <div class="info">
-                            <img src="/imgs/icon-info.svg" alt="Info Logo">
-                            <p id="gitinput">Sua foto (JPG ou PNG)</p>
+                        <input type="text" name="username" id="username" class="input-estilo">
+                        <div class="box-button">
+                            <button type="submit">Gerar meu Ingresso</button>
                         </div>
 
-                        <button type="submit">Gerar meu Ingresso</button>
+                        
 
                     </div>
 
