--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
 
             <div id="boxFormulario">
-                <form action="">
+                <form id="formulario">
 
                     <div class="avatarInput">
                         
@@ -50,7 +50,7 @@
                         <p>GitHub Username</p>
                         <input type="text" name="username" id="username" class="input-estilo">
                         <div class="box-button">
-                            <button type="submit">Gerar meu Ingresso</button>
+                            <button type="submit" id="enviar">Gerar meu Ingresso</button>
                         </div>
 
                         
@@ -71,6 +71,8 @@
 
     </div>
 
+
+    <script src="/javascript/index.js"></script>
 
 </body>
 
