--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="imgbackgroung">
+    <div class="imgbackgroung" id="imgbackgroung">
         <header>
             <img id="imgLogo" src="/imgs/logo-full.svg" alt="Logo Coding Conf">
         </header>
