--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
                     <div class="avatarInput">
                         
-                        <img class="imgUpload" src="/imgs/icon-upload.svg" alt="">
+                        <img class="imgUpload" id="imgUpload" src="/imgs/icon-upload.svg" alt="">
                         <p>Upload Avatar</p>
                         <label class="labelupload" for="imageUpload">Upload Avatar</label>
                         <input type="file" id="imageUpload" name="imageUpload" accept="image/*">
