--- a/index.html
+++ b/index.html
@@ -71,6 +71,33 @@
 
     </div>
 
+    <div class="imgbackgroung" id="ingressogerado">
+        <header>
+            <img id="imgLogo" src="/imgs/logo-full.svg" alt="Logo Coding Conf">
+        </header>
+        <main>
+            <div class="texInicial">
+                <h2>Parabéns, Jonatan Kristof!</h2>
+                <h3>Enviamos seu ingresso para jonatan@email.com e enviaremos atualizações</h3>
+            </div>
+
+            <div class="box-ingresso">
+                <div class="logo-ingresso">
+                <img src="/imgs/logo-full.svg" alt="">
+                <p>Jonatan 31, 2025</p>
+                </div>
+                
+
+            </div>
+
+            <img class="img01" src="/imgs/pattern-squiggly-line-top.svg" alt="">
+
+            <!-- <img class="img02" src="/imgs/pattern-squiggly-line-bottom-desktop.svg" alt=""> -->
+
+            <img class="img03" src="/imgs/pattern-lines.svg" alt="">
+
+            <img class="img04" src="/imgs/pattern-circle.svg" alt="">
+    </div>
 
     <script src="/javascript/index.js"></script>
 
