--- a/index.html
+++ b/index.html
@@ -81,10 +81,23 @@
                 <h3>Enviamos seu ingresso para jonatan@email.com e enviaremos atualizações</h3>
             </div>
 
-            <div class="box-ingresso">
+            <div class="box-ingressoLogo">
                 <div class="logo-ingresso">
                 <img src="/imgs/logo-full.svg" alt="">
                 <p>Jonatan 31, 2025</p>
+                </div>
+                <div class="box-ingressoAvatar">
+                    <img src="/imgs/image-avatar.jpg" alt="">
+                    <p>Jonatan Kristof</p>
+                    <div class="logo-git">
+                        <img src="/imgs/icon-github.svg" alt="">
+                        <p>@jonatan</p>
+                    </div>
+
+                    <img src="/imgs/pattern-ticket.svg" alt="">
+
+                    <p>#001</p>
+                    
                 </div>
                 
 
