--- a/index.html
+++ b/index.html
@@ -85,19 +85,21 @@
             <div class="box-ingressoLogo">
                 <div class="logo-ingresso">
                     <img src="/imgs/logo-full.svg" alt="">
-                    <p>Jonatan 31, 2025</p>
+                    <p>Jan 31, 2025</p>
                 </div>
                 <div class="box-ingressoAvatar">
-                    <img src="/imgs/image-avatar.jpg" alt="">
-                    <p>Jonatan Kristof</p>
+                    <img id="imgavatar" src="/imgs/image-avatar.jpg" alt="">
+                    <p id="Nome">Jonatan Kristof</p>
                     <div class="logo-git">
                         <img src="/imgs/icon-github.svg" alt="">
                         <p>@jonatan</p>
                     </div>
+                    <div class="box-imgingresso">
+                        <img id="img-ingresso" src="/imgs/pattern-ticket.svg" alt="">
+                    </div>
+                    
 
-                    <img src="/imgs/pattern-ticket.svg" alt="">
-
-                    <p>#001</p>
+                    <p id="codigo">#001</p>
 
                 </div>
 
