Gerador ingresso Final

--- a/index.html
+++ b/index.html
@@ -78,21 +78,21 @@
         </header>
         <main class="main-ingresso">
             <div class="texInicial">
-                <h2>Parabéns, Jonatan Kristof!</h2>
-                <h3>Enviamos seu ingresso para jonatan@email.com e enviaremos atualizações</h3>
+                <h2 id="TituloNome">Parabéns, Jonatan Kristof!</h2>
+                <h3 id="TituloEmail">Enviamos seu ingresso para jonatan@email.com e enviaremos atualizações</h3>
             </div>
 
             <div class="box-ingressoLogo">
                 <div class="logo-ingresso">
                     <img src="/imgs/logo-full.svg" alt="">
-                    <p>Jan 31, 2025</p>
+                    <p id="data">Jan 31, 2025</p>
                 </div>
                 <div class="box-ingressoAvatar">
                     <img id="imgavatar" src="/imgs/image-avatar.jpg" alt="">
                     <p id="Nome">Jonatan Kristof</p>
                     <div class="logo-git">
                         <img src="/imgs/icon-github.svg" alt="">
-                        <p>@jonatan</p>
+                        <p id="gituser">@jonatan</p>
                     </div>
                     <div class="box-imgingresso">
                         <img id="img-ingresso" src="/imgs/pattern-ticket.svg" alt="">
